--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 body {
   font-family: "美咲ゴシック", sans-serif;
+  padding-left: 10px;
 }
 
 .header-group {
   margin: 20px;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #f8ad14;
 }
 .header-group h1 {
@@ -23,10 +24,10 @@ body {
   color: #f8f8f8;
 }
 
-.button {
+.button_t1 {
   text-decoration: none;
   display: inline-block;
-  padding: 8px 24px;
+  padding: 8px 10px;
   color: white;
   opacity: 0.8;
   border-radius: 4px;
@@ -34,15 +35,44 @@ body {
   cursor: pointer;
   box-shadow: 0 5px #f88214;
 }
-.button:hovor {
+.button_t1:hovor {
   opacity: 1;
 }
-.button:active {
+.button_t1:active {
   position: relative;
   top: 7px;
   box-shadow: none;
 }
 
-.row p {
+.row img {
+  border-radius: 20px;
+  padding-left: 0px;
+}
+
+.blog_content {
   font-weight: bold;
+}
+
+.icon-image {
+  border-radius: 10px;
+}
+
+.button_t2 {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 10px;
+  color: white;
+  opacity: 0.8;
+  border-radius: 4px;
+  background-color: #f8ad14;
+  cursor: pointer;
+  box-shadow: 0 5px #f88214;
+}
+.button_t2:hovor {
+  opacity: 1;
+}
+.button_t2:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
 }/*# sourceMappingURL=stylesheet.css.map */
